--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <form action="/" method="POST">
-    <label for="cityn">Name:</label>
+    <label sfor="cityn">Name:</label>
     <input id="cityn" name="city"  />
     <button type="submit" name="button">GO</button>
     </form>
